# AI_Job_Analyzer_and_Matcher_Resume

./: AI_Job_analyzing_and_matching_resume.ipynb  README.md  pyproject.toml
