[project]
name = "ai-job-resume-matching"
version = "0.1.0"
description = "AI-powered tool for matching resumes to job descriptions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai",
    "langchain-huggingface",
    "google-genai",
    "faiss-cpu",
    "chromadb",
    "pypdf",
    "numpy",
    "pandas",
    "spacy",
    "tqdm",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"